--- a/chat-app/backend/.env
+++ b/chat-app/backend/.env
@@ -1,3 +1,4 @@
 PORT=5000
-MONGO_URL=mongodb://127.0.0.1:27017/chatApp
+MONGO_URL=mongodb+srv://chatuser:Khushay09@cluster0.5q8y5k4.mongodb.net/chat-app?retryWrites=true&w=majority
 JWT_SECRET=some_long_secret_value_for_token
+
