--- a/chat-app/backend/.env
+++ b/chat-app/backend/.env
@@ -1,4 +1,4 @@
 PORT=5000
 MONGO_URL=mongodb+srv://chatuser:Khushay09@cluster0.5q8y5k4.mongodb.net/chat-app?retryWrites=true&w=majority
-JWT_SECRET=xD3v$91oZ@!mQ7w#tN6bLpR8s2Vx!eZ0uP@Hj*KrTzU%
+JWT_SECRET=xAjKhD3v$91oZ@!mQ7w#tN6bLpR8s2Vx!eZ0uP@Hj*KrTzU%
 
